--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "react-practice",
+  "name": "react-master",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.0.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.59",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
+    "@types/node": "^16.18.58",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "apexcharts": "^3.44.0",
+    "build": "^0.1.4",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +49,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.0.5",
+    "@types/react-helmet": "^6.1.8",
+    "@types/react-router-dom": "5.3",
+    "@types/styled-components": "^5.1.28"
   }
 }
